// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderSummary tests Should match snapshot for shipTo account hold 1`] = `
<div>
  <div
    class="MuiBox-root css-8kjoqe"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-1y7idr6-MuiTypography-root"
    >
      Order Summary
    </h5>
    <div
      class="MuiBox-root css-14qg2ht"
      data-testid="ordersummary-component"
    >
      <div
        class="MuiBox-root css-1lcbd1w"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
        >
          Subtotal
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
          data-testid="cart-subtotal"
        >
          $0.43
        </p>
      </div>
      <div
        class="MuiBox-root css-1ib0seh"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
        >
          Shipping & Handling
        </span>
        <span
          class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          data-testid="cart-shipping-handling"
        >
          FREE
        </span>
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-1vlul9-MuiDivider-root"
      />
      <div
        class="MuiBox-root css-69i1ev"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
        >
          Total Before Tax
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
          data-testid="cart-total-before-tax"
        >
          $0.43
        </p>
      </div>
      <div
        class="MuiBox-root css-osr1l3"
      >
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-1egkuzh-MuiButtonBase-root-MuiButton-root"
          data-testid="checkout-top-button"
          disabled=""
          style="width: 100%;"
          tabindex="-1"
          type="button"
        />
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardSuccess MuiAlert-standard css-1348n20-MuiPaper-root-MuiAlert-root"
          role="alert"
        >
          <div
            class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
          >
            <svg>
              warning.svg
            </svg>
          </div>
          <div
            class="MuiAlert-message css-acap47-MuiAlert-message"
          >
            There may be an issue with your account. Please contact the Credit Department.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderSummary tests should match snapshot as employee 1`] = `
<div>
  <div
    class="MuiBox-root css-8kjoqe"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-1y7idr6-MuiTypography-root"
    >
      Order Summary
    </h5>
    <div
      class="MuiBox-root css-14qg2ht"
      data-testid="ordersummary-component"
    >
      <div
        class="MuiBox-root css-1lcbd1w"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
        >
          Subtotal
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
          data-testid="cart-subtotal"
        >
          $0.43
        </p>
      </div>
      <div
        class="MuiBox-root css-1ib0seh"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
        >
          Shipping & Handling
        </span>
        <span
          class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          data-testid="cart-shipping-handling"
        >
          FREE
        </span>
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-1vlul9-MuiDivider-root"
      />
      <div
        class="MuiBox-root css-69i1ev"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
        >
          Total Before Tax
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
          data-testid="cart-total-before-tax"
        >
          $0.43
        </p>
      </div>
      <div
        class="MuiBox-root css-osr1l3"
      >
        <span
          aria-label="Checkout is currently disabled for employees."
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-1egkuzh-MuiButtonBase-root-MuiButton-root"
            data-testid="checkout-top-button"
            disabled=""
            style="width: 100%;"
            tabindex="-1"
            type="button"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderSummary tests should match snapshot when cart subtotal is over 10M on Waterworks 1`] = `
<div>
  <div
    class="MuiBox-root css-8kjoqe"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-1y7idr6-MuiTypography-root"
    >
      Order Summary
    </h5>
    <div
      class="MuiBox-root css-14qg2ht"
      data-testid="ordersummary-component"
    >
      <div
        class="MuiBox-root css-1lcbd1w"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
        >
          Subtotal
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
          data-testid="cart-subtotal"
        >
          $10,000,000.00
        </p>
      </div>
      <div
        class="MuiBox-root css-1ib0seh"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
        >
          Shipping & Handling
        </span>
        <span
          class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          data-testid="cart-shipping-handling"
        >
          FREE
        </span>
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-1vlul9-MuiDivider-root"
      />
      <div
        class="MuiBox-root css-69i1ev"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
        >
          Total Before Tax
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
          data-testid="cart-total-before-tax"
        >
          $10,000,000.00
        </p>
      </div>
      <div
        class="MuiBox-root css-osr1l3"
      >
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-1egkuzh-MuiButtonBase-root-MuiButton-root"
          data-testid="checkout-top-button"
          disabled=""
          style="width: 100%;"
          tabindex="-1"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderSummary tests should match snapshot when loading 1`] = `
<div>
  <div
    class="MuiBox-root css-8kjoqe"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-1y7idr6-MuiTypography-root"
    >
      Order Summary
    </h5>
    <div
      class="MuiBox-root css-14qg2ht"
      data-testid="ordersummary-component"
    >
      <div
        class="MuiBox-root css-0"
        data-testid="ordersummary-skeleton"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 150px;"
          />
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 200px;"
          />
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 200px;"
          />
        </p>
        <div
          class="MuiBox-root css-1sf3xto"
        >
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
          />
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 100px;"
          />
        </p>
      </div>
      <div
        class="MuiBox-root css-osr1l3"
      >
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-1egkuzh-MuiButtonBase-root-MuiButton-root"
          data-testid="checkout-top-button"
          disabled=""
          style="width: 100%;"
          tabindex="-1"
          type="button"
        >
          <div
            class="MuiBox-root css-hyxlzm"
          >
            <span
              aria-valuenow="100"
              class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1wyqyef-MuiCircularProgress-root"
              role="progressbar"
              style="width: 24px; height: 24px; transform: rotate(-90deg);"
            >
              <svg
                class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="19.5"
                  stroke-width="5"
                  style="stroke-dasharray: 122.522; stroke-dashoffset: 0.000px;"
                />
              </svg>
            </span>
            <span
              class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1gse1c1-MuiCircularProgress-root"
              role="progressbar"
              style="width: 24px; height: 24px;"
            >
              <svg
                class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="19.5"
                  stroke-width="5"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderSummary tests should match snapshot when loading with additionalCTAText 1`] = `
<div>
  <div
    class="MuiBox-root css-8kjoqe"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-1y7idr6-MuiTypography-root"
    >
      Order Summary
    </h5>
    <div
      class="MuiBox-root css-14qg2ht"
      data-testid="ordersummary-component"
    >
      <div
        class="MuiBox-root css-0"
        data-testid="ordersummary-skeleton"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 150px;"
          />
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 200px;"
          />
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 200px;"
          />
        </p>
        <div
          class="MuiBox-root css-1sf3xto"
        >
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
          />
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 100px;"
          />
        </p>
      </div>
      <div
        class="MuiBox-root css-osr1l3"
      >
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-1egkuzh-MuiButtonBase-root-MuiButton-root"
          data-testid="checkout-top-button"
          disabled=""
          style="width: 100%;"
          tabindex="-1"
          type="button"
        >
          <div
            class="MuiBox-root css-hyxlzm"
          >
            <span
              aria-valuenow="100"
              class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1wyqyef-MuiCircularProgress-root"
              role="progressbar"
              style="width: 24px; height: 24px; transform: rotate(-90deg);"
            >
              <svg
                class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="19.5"
                  stroke-width="5"
                  style="stroke-dasharray: 122.522; stroke-dashoffset: 0.000px;"
                />
              </svg>
            </span>
            <span
              class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1gse1c1-MuiCircularProgress-root"
              role="progressbar"
              style="width: 24px; height: 24px;"
            >
              <svg
                class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="19.5"
                  stroke-width="5"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <button
        class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  css-1tcpkkx-MuiButtonBase-root-MuiButton-root"
        data-testid="additional-cta-button"
        tabindex="0"
        type="button"
      >
        <div
          class="MuiBox-root css-hyxlzm"
        >
          <span
            aria-valuenow="100"
            class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1wyqyef-MuiCircularProgress-root"
            role="progressbar"
            style="width: 24px; height: 24px; transform: rotate(-90deg);"
          >
            <svg
              class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
                cx="44"
                cy="44"
                fill="none"
                r="19.5"
                stroke-width="5"
                style="stroke-dasharray: 122.522; stroke-dashoffset: 0.000px;"
              />
            </svg>
          </span>
          <span
            class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1gse1c1-MuiCircularProgress-root"
            role="progressbar"
            style="width: 24px; height: 24px;"
          >
            <svg
              class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                cx="44"
                cy="44"
                fill="none"
                r="19.5"
                stroke-width="5"
              />
            </svg>
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`OrderSummary tests should match snapshot with approve data 1`] = `
<div>
  <div
    class="MuiBox-root css-8kjoqe"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-1y7idr6-MuiTypography-root"
    >
      Order Summary
    </h5>
    <div
      class="MuiBox-root css-14qg2ht"
      data-testid="ordersummary-component"
    >
      <div
        class="MuiBox-root css-1lcbd1w"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
        >
          Subtotal
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
          data-testid="cart-subtotal"
        >
          $20.00
        </p>
      </div>
      <div
        class="MuiBox-root css-1ib0seh"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
        >
          Shipping & Handling
        </span>
        <span
          class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          data-testid="cart-shipping-handling"
        >
          FREE
        </span>
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-1vlul9-MuiDivider-root"
      />
      <div
        class="MuiBox-root css-69i1ev"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
        >
          Total Before Tax
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
          data-testid="cart-total-before-tax"
        >
          $23.00
        </p>
      </div>
      <div
        class="MuiBox-root css-osr1l3"
      >
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-1egkuzh-MuiButtonBase-root-MuiButton-root"
          data-testid="checkout-top-button"
          disabled=""
          style="width: 100%;"
          tabindex="-1"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderSummary tests should match snapshot with approve data and tax 1`] = `
<div>
  <div
    class="MuiBox-root css-8kjoqe"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-1y7idr6-MuiTypography-root"
    >
      Order Summary
    </h5>
    <div
      class="MuiBox-root css-14qg2ht"
      data-testid="ordersummary-component"
    >
      <div
        class="MuiBox-root css-1lcbd1w"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
        >
          Subtotal
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
          data-testid="cart-subtotal"
        >
          $20.00
        </p>
      </div>
      <div
        class="MuiBox-root css-1ib0seh"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
        >
          Shipping & Handling
        </span>
        <span
          class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          data-testid="cart-shipping-handling"
        >
          FREE
        </span>
      </div>
      <div
        class="MuiBox-root css-69i1ev"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
        >
          Tax
        </span>
        <span
          class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
        >
          $3.00
        </span>
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-1vlul9-MuiDivider-root"
      />
      <div
        class="MuiBox-root css-69i1ev"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
        >
          Total
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
          data-testid="cart-total-before-tax"
        >
          $23.00
        </p>
      </div>
      <div
        class="MuiBox-root css-osr1l3"
      >
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-1egkuzh-MuiButtonBase-root-MuiButton-root"
          data-testid="checkout-top-button"
          disabled=""
          style="width: 100%;"
          tabindex="-1"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderSummary tests should match snapshot with approve data on mobile 1`] = `
<div>
  <div
    class="MuiBox-root css-9m12vg"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-1c84rh7-MuiTypography-root"
    >
      Order Summary
    </h5>
    <div
      class="MuiBox-root css-14qg2ht"
      data-testid="ordersummary-component"
    >
      <div
        class="MuiBox-root css-1lcbd1w"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
        >
          Subtotal
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
          data-testid="cart-subtotal"
        >
          $20.00
        </p>
      </div>
      <div
        class="MuiBox-root css-1ib0seh"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
        >
          Shipping & Handling
        </span>
        <span
          class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          data-testid="cart-shipping-handling"
        >
          FREE
        </span>
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-1vlul9-MuiDivider-root"
      />
      <div
        class="MuiBox-root css-69i1ev"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
        >
          Total Before Tax
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
          data-testid="cart-total-before-tax"
        >
          $23.00
        </p>
      </div>
      <div
        class="MuiBox-root css-osr1l3"
      >
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-1egkuzh-MuiButtonBase-root-MuiButton-root"
          data-testid="checkout-top-button"
          disabled=""
          style="width: 100%;"
          tabindex="-1"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderSummary tests should match snapshot with only tax 1`] = `
<div>
  <div
    class="MuiBox-root css-8kjoqe"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-1y7idr6-MuiTypography-root"
    >
      Order Summary
    </h5>
    <div
      class="MuiBox-root css-14qg2ht"
      data-testid="ordersummary-component"
    >
      <div
        class="MuiBox-root css-1lcbd1w"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
        >
          Subtotal
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
          data-testid="cart-subtotal"
        >
          $0.43
        </p>
      </div>
      <div
        class="MuiBox-root css-1ib0seh"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
        >
          Shipping & Handling
        </span>
        <span
          class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          data-testid="cart-shipping-handling"
        >
          FREE
        </span>
      </div>
      <div
        class="MuiBox-root css-69i1ev"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
        >
          Tax
        </span>
        <span
          class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
        />
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-1vlul9-MuiDivider-root"
      />
      <div
        class="MuiBox-root css-69i1ev"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
        >
          Total
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
          data-testid="cart-total-before-tax"
        >
          $0.43
        </p>
      </div>
      <div
        class="MuiBox-root css-osr1l3"
      >
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-1egkuzh-MuiButtonBase-root-MuiButton-root"
          data-testid="checkout-top-button"
          disabled=""
          style="width: 100%;"
          tabindex="-1"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;
